# Teamy-Studio

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build-openconsole.cmd  build.rs  check-all.ps1  clippy.toml  recent_docs.ps1  run-profiler.ps1  stop.ps1  update.ps1
.config/tracey/: config.styx
docs/notes/: So trying to work on this studio softwar.md  about-conpty.md  audio-input-inbox-plan.md  cellgrid.md  computer-metaphor-and-paint-overlay-plan.md  cursor-info-plan.md  directx-migration.md  font-verification.md  guns and metrics.md  init.md  key-input-problems.md  logs-window-and-toasts-plan.md  notebook-roadmap.md  perf try again.md  slug-font-renderer.md  spatial.md  terminal-control-plane.md  terminal-engine-replacement-plan.md  terminal-osc-title-progress-plan.md  terminal-stack-roles.md  timeline-display-model-plan.md  timeline-display-model-record-of-decision.md  timeline-profiler-plan.md  timeline-transcription-session-notes.md  voice-scrollandfuture copy.md  voice-scrollandfuture.md  whisper-burn-conversion-lessons-learned.md  whisperx-optimization-plan.md  window-border-garden-plan.md  window-language-and-launcher-plan.md  windows-terminal-speedy-renderering.md
python/whisperx-daemon/: pyproject.toml
python/whisperx-daemon/teamy_whisperx_daemon/: __init__.py  __main__.py  protocol.py
resources/: app.manifest
src/: audio.rs  frontend.rs  lib.rs  logging_init.rs  logs.rs  main.rs  model.rs  shell_default.rs  transcription.rs  whisper.rs  workspace.rs
tests/: cli_fuzzing.rs  cli_surface.rs  keyboard_input_regressions.rs  notebook_paths.rs  render_offscreen_cli.rs  render_offscreen_fixture.rs  slug_snapshot.rs  terminal_replay_cli.rs
(+142 files in other folders)
